--- a/第二幕.md
+++ b/第二幕.md
@@ -36,6 +36,9 @@
 马志明：记得今晚有生日会啊！
 吴之璟，蒋文明，杨明：好（讲的时候继续打）
 
+镜头7.5:315A阳台，高胜寒在浇花
+============
+
 镜头八：311A，冯栩座侧面特写
 ============
 冯栩扣上笔记本，拉上旁边的邵成
@@ -43,9 +46,9 @@
 邵成：”去哪儿啊？”
 冯栩：“等会儿再说。”
 
-镜头九：313B，高胜寒看了看还没有起床的王梓仲
+镜头九：313B，郭晓阳看了看还没有起床的王梓仲
 ============
-高胜寒：“为了个生日会，至于伤心的不起床吗？”叹了口气，走了
+郭晓阳：“为了个生日会，至于伤心的不起床吗？”叹了口气，走了
 
 镜头十：叶子鹏背面，叶子鹏目送他们走到门口
 ============
@@ -54,7 +57,7 @@
 第二幕结语：目前已出场的有蒋文明，杨明，吴之璟，叶子鹏，任淼，冯栩，马志明，王启圣，张明瑞，高胜寒，王梓仲，朱新瑞，谢琛睿，邵成
 还未出场的：郑兆衡，陈雨兰，朱俸民，郭晓阳，张浩天，钱迪晨，温和，张哲宇，陈立康，高思达
 
-初步设定：郑兆衡，张浩天，钱迪晨，高思达，高胜寒几个人讨论出国录取的事情在喝酒（这里设置已经喝倒的剧情，然后读档从来，致敬re），后来还是准时来了。
+初步设定：郑兆衡，张浩天，钱迪晨，高思达几个人讨论出国录取的事情在喝酒（这里设置已经喝倒的剧情，然后读档从来，致敬re），后来还是准时来了。
 陈雨兰和朱俸民在8-500赶paper，给朱俸民带一个秃头假发装教授，后来paper赶出来了就来了，马志明本来是要来找他们的，路遇正在8-500写学生节剧本而痛苦不已的朱新瑞，给他支了个小招也来了。
 陈立康在接受温和的面试，张明瑞撞见了，虽然陈立康因为正要进行面试对张明瑞很不满，后面会给个镜头他打电话让张哲宇拿蜡烛
 任淼在逛街，本来收到了晚上某个演唱会的邀请，后来看到在一旁蛋糕店买蛋糕的冯栩和邵成就拒绝了。
