--- a/第四幕.md
+++ b/第四幕.md
@@ -70,7 +70,7 @@
 =========
 回忆结束
 
-镜头十四：高思达，钱迪晨，张浩天，郑兆衡，高胜寒，郭晓阳进入
+镜头十四：高思达，钱迪晨，张浩天，郑兆衡，郭晓阳进入
 =========
 高思达：人也是会来齐的
 
@@ -79,9 +79,10 @@
 镜头十五：钱迪晨手机12:00闹钟响了
 =========
 
-镜头十六：高胜寒正面
+镜头十六：郭晓阳正面
 =========
-高胜寒一脸懵逼。
+郭晓阳一脸懵逼。
+背景给出RE:从零开始那个读档音效
 高思达：什么情况？
 钱迪晨：哦没事我12点有个闹钟而已。来，给高胜寒满上。
 背景音（推荐吴之璟）：读档成功。
@@ -92,9 +93,9 @@
 =========
 高思达：噢？生日会？那肯定要去啊！
 
-镜头十八：郭晓阳正面
+镜头十八：郑兆衡正面
 =========
-郭晓阳：那咱不能喝醉了。服务员，来一扎清华酸奶，啤酒撤了吧。
+郑兆衡：那咱不能喝醉了。服务员，来一扎清华酸奶，啤酒撤了吧。
 
 回忆结束
 
