--- a/第三幕.md
+++ b/第三幕.md
@@ -1,11 +1,11 @@
 饭店篇
 
-镜头一：高思达，郑兆衡，张浩天，郭晓阳，钱迪晨吃饭，给张浩天手机特写，表示他正在看叶子鹏直播
+镜头一：高思达，郑兆衡，张浩天，钱迪晨吃饭，给张浩天手机特写，表示他正在看叶子鹏直播
 =========
 
 镜头二：高思达举杯
 =========
-高思达：来来来我们庆祝一下郑兆衡同学顺利拿到了xxx学校的offer
+高思达：来来来我们庆祝一下钱迪晨同学顺利拿到了xxx学校的offer
 
 镜头三：郭晓阳跟张浩天说悄悄话
 =========
@@ -16,13 +16,10 @@
 ========
 众人：来来来，干干干。
 
-镜头五：高胜寒在门外停自行车
+镜头六：郭晓阳加入饭桌
 ========
-
-镜头六：高胜寒加入饭桌
-========
-郑兆衡：哎，你怎么才来啊？来坐坐坐。（转头继续跟大家讲）
-郑兆衡：我跟你们讲啊，我去的那个学校，excited！
+钱迪晨：哎，你怎么才来啊？来坐坐坐。（转头继续跟大家讲）
+钱迪晨：我跟你们讲啊，我去的那个学校，excited！
 
 镜头七：钱迪晨手机12:00闹钟响了
 =======
@@ -32,43 +29,39 @@
 高思达：什么情况？
 钱迪晨：哦没事我12点有个闹钟而已。来，给高胜寒满上。
 
-镜头九：高胜寒接过酒杯
+镜头九：郭晓阳接过酒杯
 =======
 
 镜头十：高思达再次举杯
 =======
 高思达：来，我们今天不醉不归。
 
-镜头十一：所有人喝光了酒，除了高胜寒都倒了
+镜头十一：所有人喝光了酒，除了郭晓阳都倒了
 =======
 
-镜头十二：高胜寒露出惊愕的表情
+镜头十二：郭晓阳露出惊愕的表情
 =======
-高胜寒：喂你们到底喝了多少啊！
+郭晓阳：喂你们到底喝了多少啊！
 
 镜头十三：醉倒的高思达
 =======
 高思达：再陪我喝一杯，朋友（炉石）
 
-镜头十四：醉倒的郭晓阳
-=======
-郭晓阳：冻住，不许走（守望）
-
 镜头十五：醉倒的张浩天
 =======
-张浩天：giligili爱……
+张浩天：就算THUPOST倒闭了，也不会收大家一分钱
 
 镜头十六：醉倒的郑兆衡
 =======
-郑兆衡：伞剑，伞剑（姑获鸟）
+郑兆衡：伞剑，伞剑，飒（姑获鸟）
 
 镜头十七：醉倒的钱迪晨
 =======
 钱迪晨：人在塔在
 
-镜头十八：高胜寒露出焦急的表情
+镜头十八：郭晓阳露出焦急的表情
 =======
-高胜寒：这晚上还怎么参加生日会啊
+郭晓阳：这晚上还怎么参加生日会啊
 
 饭店篇完
 
@@ -109,7 +102,7 @@
 =======
 温和：来咱们是游戏公司啊，来聊聊你在各种游戏里拿过的最值钱的装备都有哪些。
 
-陈立康：嗯，比如R5改的失明，穿透，游侠骑士枪，还有+14的无影剑，还有火麒麟
+陈立康：嗯，比如得到祝福的R5改失明，穿透，游侠骑士枪，还有+14的无影剑，还有AK47-火麒麟
 
 镜头三：张明瑞在门外气的剁脚。
 =======
@@ -149,11 +142,13 @@
 
 镜头六：朱新瑞在小房间里拿着笔记本电脑敲剧本
 ========
-朱新瑞：你别来烦我，我这剧本改了已经有100来次了。该死的，学生节到底讲什么故事比较好。
+朱新瑞：你别来烦我，我这剧本改了已经有100来次了。该死的，等等，这一段谁改的，这怎么能喝醉啊！
 
 马志明：今天晚上……
 
 朱新瑞暴跳起来：都说了别烦我，你又打断我思路了你知道吗？你知道我现在剧本讲什么故事都乱套了吗？
+
+朱新瑞点了一根烟，掉在地上，然后捡起来抽反了。
 
 马志明：生日会的事。。。
 
